cmake_minimum_required(VERSION 3.14)
project(editor)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(cn)
add_executable(1 1.c)
add_executable(2 2.c)
add_executable(7 7.c)
add_executable(9 9.c)
add_executable(205 205.c)
add_executable(205p 205.cpp)
add_executable(455 455.c)
add_executable(9p 9.cpp)
add_executable(387 387.c)
add_executable(387p 387.cpp)
add_executable(1p 1.cpp)
add_executable(2p 2.cpp)
add_executable(3p 3.cpp)
add_executable(5p 5.cpp)
add_executable(6p 6.cpp)
add_executable(8p 8.cpp)
add_executable(13p 13.cpp)
add_executable(15p 15.cpp)
add_executable(54p 54.cpp)
add_executable(118p 118.cpp)
add_executable(104p 104.cpp)
add_executable(100p 100.cpp)
add_executable(121p 121.cpp)
add_executable(146p 146.cpp)
add_executable(206p 206.cpp)
add_executable(199p 199.cpp)
add_executable(215p 215.cpp)
add_executable(110p 110.cpp)
add_executable(53p 53.cpp)
add_executable(92p 92.cpp)
add_executable(46p 46.cpp)
add_executable(23p 23.cpp)
add_executable(90p 90.cpp)
add_executable(42p 42.cpp)
add_executable(190p 190.cpp)
add_executable(62p 62.cpp)
add_executable(64p 64.cpp)
add_executable(78p 78.cpp)
add_executable(25p 25.cpp)
add_executable(958p 958.cpp)
add_executable(136p 136.cpp)
add_executable(7p 7.cpp)
add_executable(300p 300.cpp)
add_executable(224p 224.cpp)
add_executable(617p 617.cpp)
add_executable(888p 888.cpp)
add_executable(442p 442.cpp)
add_executable(200p 200.cpp)
add_executable(169p 169.cpp)
add_executable(151p 151.cpp)
add_executable(98p 98.cpp)
add_executable(125p 125.cpp)
add_executable(39p 39.cpp)
add_executable(88p 88.cpp)
add_executable(240p 240.cpp)
add_executable(148p 148.cpp)
add_executable(31p 31.cpp)
add_executable(80p 80.cpp)
add_executable(989p 989.cpp)
add_executable(321p 321.cpp)
add_executable(415p 415.cpp)
add_executable(34p 34.cpp)
add_executable(1143p 1143.cpp)
add_executable(781p 781.cpp)
add_executable(5713p 5713.cpp)
add_executable(5714p 5714.cpp)
add_executable(5715p 5715.cpp)
add_executable(offer9p offer9.cpp)
add_executable(offer55Ip offer55I.cpp)
add_executable(offer10lp offer10l.cpp)
add_executable(offer10llp offer10ll.cpp)
add_executable(offer12p offer12.cpp)
add_executable(offer13p offer13.cpp)
add_executable(offer11p offer11.cpp)
add_executable(offer27p offer27.cpp)
add_executable(offer30p offer30.cpp)
add_executable(offer03p offer03.cpp)
add_executable(offer04p offer04.cpp)
add_executable(offer05p offer05.cpp)
add_executable(offer06p offer06.cpp)
add_executable(offer07p offer07.cpp)
add_executable(offer15p offer15.cpp)
add_executable(offer16p offer16.cpp)
add_executable(offer17p offer17.cpp)
add_executable(offer18p offer18.cpp)
add_executable(offer24p offer24.cpp)
add_executable(offer20p offer20.cpp)
add_executable(offer21p offer21.cpp)
add_executable(offer22p offer22.cpp)
add_executable(offer25p offer25.cpp)
add_executable(offer26p offer26.cpp)
add_executable(offer28p offer28.cpp)
add_executable(offer29p offer29.cpp)
add_executable(offer31p offer31.cpp)
add_executable(offer32p offer32.cpp)
add_executable(offer32llp offer32ll.cpp)
add_executable(offer32lllp offer32lll.cpp)
add_executable(offer33p offer33.cpp)
add_executable(offer34p offer34.cpp)
add_executable(offer35p offer35.cpp)
add_executable(offer36p offer36.cpp)
add_executable(offer38p offer38.cpp)
add_executable(offer39p offer39.cpp)
add_executable(offer40p offer40.cpp)
add_executable(offer42p offer42.cpp)
add_executable(offer44p offer44.cpp)
add_executable(offer45p offer45.cpp)
add_executable(offer47p offer47.cpp)
add_executable(offer48p offer48.cpp)
add_executable(offer49p offer49.cpp)
add_executable(offer50p offer50.cpp)
add_executable(offer52p offer52.cpp)
add_executable(offer53lp offer53l.cpp)
add_executable(offer53llp offer53ll.cpp)
add_executable(offer54p offer54.cpp)
add_executable(offer56lp offer56l.cpp)
add_executable(offer56llp offer56ll.cpp)
add_executable(offer57p offer57.cpp)
add_executable(offer57llp offer57ll.cpp)
add_executable(offer58lp offer58l.cpp)
add_executable(offer58llp offer58ll.cpp)
add_executable(offer59lp offer59l.cpp)
add_executable(offer59llp offer59ll.cpp)
add_executable(offer60p offer60.cpp)
add_executable(offer61p offer61.cpp)
add_executable(offer62p offer62.cpp)
add_executable(offer64p offer64.cpp)
add_executable(offer65p offer65.cpp)
add_executable(offer66p offer66.cpp)
add_executable(offer67p offer67.cpp)
add_executable(offer68lp offer68l.cpp)
add_executable(offer68llp offer68ll.cpp)
add_executable(offer14lp offer14l.cpp)
add_executable(offer14llp offer14ll.cpp)
add_executable(lc21 lc21.cpp)
add_executable(hash hash.c)
add_executable(test test.cpp)
add_executable(tree tree.cpp)
add_executable(mergeSort mergeSort.cpp)
add_executable(InsertionTwo InsertionTwo.cpp)
add_executable(bytedance1p bytedance1.cpp)
add_executable(calculater calculater.cpp)
add_executable(wangyi wangyi.cpp)
add_executable(meituan meituan.cpp)
add_executable(sanliuling sanliuling.cpp)
add_executable(xiecheng xiecheng.cpp)